--- a/style.css
+++ b/style.css
@@ -95,58 +95,31 @@ header nav li a{
 	padding-left: 62%;
 }
 
-.tabela li{
+.tables li{
+	height: 170px;
+	width: 23%;
+	background-color: red;
 	list-style: none;
-}
-
-
-img{
-	transition: 1s;
-	position: relative;
-	top: 20px;
-}
-
-img:hover{
-	transform: rotate(360deg);
-}
-
-.program-ime{
-	/*position: relative;
-	left: 20px;*/
-	font-size: 20px;
-}
-
-.tabela{
-	text-align: center;
-}
-
-.tabela li{
 	float: left;
-	margin: 10px;
+	margin: 1%;
 }
 
-
-.tabela::after{
-	display: block;
-	content: "";
-	clear: both;
+.tables li:nth-child(2){
+	background-color: blue;
+}
+.tables li:nth-child(3){
+	background-color: purple;
 }
 
-.nevidljiv{
-	height: 400px;
-	width: 400px;
-	background-color: white;
-	position: relative;
-	top: -400px;
-	left: 400px;
-	display: none;	
-	padding: 15px;
-	text-align: center;
-	border: 3px solid #7a7a7a;
-	border-radius: 20px;
-	z-index: 1;
+.tables li:nth-child(4){
+	background-color: cyan;
 }
 
-.nevidljiv p{
-	line-height: 1.7em;
+.program{
+
+	transition: transform 300ms ease-in-out;
+}
+
+.clicked{
+	transform: translate(500px, -50px) scale(2.5, 2.5) rotateY(360deg);
 }
